# rustc-auto-publish

./: Cargo.toml  README.md
.github/workflows/: main.yml
src/: main.rs
