[package]
name = "rustc-auto-publish"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[dependencies]
cargo = "0.24"
curl = "0.4"
flate2 = "1.0"
semver = { version = "0.9", features = ["serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
crates-io = "0.13.0"
tar = "0.4"
tempdir = "0.3"
toml = "0.4"
